--- a/index.ru.html
+++ b/index.ru.html
@@ -212,7 +212,8 @@ https://templatemo.com/tm-582-tale-seo-agency
               <img src="./img/17.jpg" alt="">
               <div class="down-content">
                 <h4>Нилюфер мебель - Качественный изготовитель мебели в нашей стране.
-                  Нилюфер мебель - гарантия и качество.</h4>
+                  Нилюфер мебель - гарантия и качество.
+                </h4>
                 <a href="#"><i class="fa fa-link"></i></a>
               </div>
             </div>
@@ -360,7 +361,7 @@ https://templatemo.com/tm-582-tale-seo-agency
                     <div class="col-lg-4">
                       <div class="info-item">
                         <i class="fa fa-envelope"></i>
-                        <h4><a href="#">info@company.com</a></h4>
+                        <h4><a href="mailto:info@example.com?subject=subject&cc=predominant2022@gmail.com">Gmail</a></h4>
                         <h4><a href="#">hello@company.com</a></h4>
                       </div>
                     </div>
