--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@ https://templatemo.com/tm-582-tale-seo-agency
                     <div class="col-lg-4">
                       <div class="info-item">
                         <i class="fa fa-envelope"></i>
-                        <h4><a href="#">info@company.com</a></h4>
+                        <h4><a href="mailto:info@example.com?subject=subject&cc=predominant2022@gmail.com">Gmail</a></h4>
                         <h4><a href="#">hello@company.com</a></h4>
                       </div>
                     </div>
